# tanso

./: .env.example  .gitignore  README.md  STATUS.md  docker-compose.yml  setup.bat  start.bat  stop.bat
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_run_meta_snapshot.py  0003_segment_elevation.py
backend/seeds/: 01_emission_factors.sql  02_speed_bin_factors.sql  03_vehicles_sample.sql  04_extended_trucks.sql  05_heavy_vehicles_sample.sql  README.md
backend/src/: __init__.py  main.py
backend/src/api/: health.py  schemas.py
backend/src/core/: asyncio_compat.py  config.py  db.py  logging.py
backend/src/eco/: __init__.py  calculator.py  factors.py  normalizer.py
backend/src/llm/: __init__.py  client.py  prompts.py  schemas.py  tools.py  validator.py
backend/src/models/: __init__.py  base.py  emission_factor.py  job.py  route.py  run.py  speed_bin_factor.py  vehicle.py
backend/src/routing/: adapter.py  base.py  elevation.py  kakao.py  ors.py  schemas.py
backend/src/scripts/: init_db.py  ping_apis.py  test_compare_engines.py  test_e2e_llm.py  test_e2e_phase3.py  test_e2e_vrp.py  test_kakao.py  test_ors.py  test_planner.py  verify_db.py
backend/tests/: conftest.py  test_adapter.py  test_api_health.py  test_api_runs_and_stats.py  test_api_vehicles.py  test_eco_calculator.py  test_eco_factors.py  test_eco_normalizer.py  test_kakao_parser.py  test_llm_narrative.py  test_llm_schemas.py  test_llm_validator.py  test_ors_parser.py  test_routing_schemas.py  test_vrp_solver.py
(+47 files in other folders)
