[project]
name = "elo-backend"
version = "0.1.0"
description = "E.L.O — Eco Logistics Optimizer backend (FastAPI + OR-Tools + Gemini)"
readme = "../README.md"
requires-python = ">=3.12"
authors = [{ name = "E.L.O Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary,pool]>=3.2.3",
    "geoalchemy2>=0.16.0",
    # HTTP client
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    # Solver
    "ortools>=9.11.4210",
    # LLM
    "google-genai>=0.3.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "shapely>=2.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
